# adapta-solarized-gtk-theme

./: Makefile.am  configure.ac
extra/: Makefile.am
gtk/: Makefile.am
gtk/sass/: compile-gresource.sh  gtk.gresource.xml.in  parse-sass.sh
gtk/sass/4.0/: gtk.scss
